libqt6c/src/libqaccessiblewidget.hpp

typedef struct QAccessibleWidget QAccessibleWidget;
typedef struct QWidget QWidget;
QAccessibleWidget* QAccessibleWidget_new(QWidget* o);
QAccessibleWidget* QAccessibleWidget_new2(QWidget* o, int r);
QAccessibleWidget* QAccessibleWidget_new3(QWidget* o, int r, const libqt_string name);
bool QAccessibleWidget_IsValid(const QAccessibleWidget* self);
void QAccessibleWidget_OnIsValid(const QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnWindow(const QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnChildCount(const QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnIndexOfChild(const QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnRelations(const QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnFocusChild(const QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnRect(const QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnParent(const QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnChild(const QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnText(const QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnRole(const QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnState(const QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnForegroundColor(const QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnBackgroundColor(const QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnActionNames(const QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnDoAction(QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnKeyBindingsForAction(const QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnObject(const QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnSetText(QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnChildAt(const QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnLocalizedActionName(const QAccessibleWidget* self, intptr_t slot);
void QAccessibleWidget_OnLocalizedActionDescription(const QAccessibleWidget* self, intptr_t slot);