QtBeef/src/Qt/qaccessiblewidget.bf

class QAccessibleWidget : IQAccessibleWidget, IQAccessibleObject, IQAccessibleInterface, IQAccessibleActionInterface
{
	private QAccessibleWidget_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	static void QtBf_ConnectSignals(Self obj)
	{
		CQt.ObjectHandleMap[obj.ObjectPtr] = obj;
		CQt.QAccessibleWidget_OnIsValid(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnIsValid);
		CQt.QAccessibleWidget_OnWindow(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnWindow);
		CQt.QAccessibleWidget_OnChildCount(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnChildCount);
		CQt.QAccessibleWidget_OnIndexOfChild(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnIndexOfChild);
		CQt.QAccessibleWidget_OnRelations(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnRelations);
		CQt.QAccessibleWidget_OnFocusChild(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnFocusChild);
		CQt.QAccessibleWidget_OnRect(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnRect);
		CQt.QAccessibleWidget_OnParent(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnParent);
		CQt.QAccessibleWidget_OnChild(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnChild);
		CQt.QAccessibleWidget_OnText(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnText);
		CQt.QAccessibleWidget_OnRole(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnRole);
		CQt.QAccessibleWidget_OnState(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnState);
		CQt.QAccessibleWidget_OnForegroundColor(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnForegroundColor);
		CQt.QAccessibleWidget_OnBackgroundColor(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnBackgroundColor);
		CQt.QAccessibleWidget_OnInterface_Cast(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnInterface_Cast);
		CQt.QAccessibleWidget_OnActionNames(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnActionNames);
		CQt.QAccessibleWidget_OnDoAction(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnDoAction);
		CQt.QAccessibleWidget_OnKeyBindingsForAction(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnKeyBindingsForAction);
		CQt.QAccessibleWidget_OnObject(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnObject);
		CQt.QAccessibleWidget_OnChildAt(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnChildAt);
		CQt.QAccessibleWidget_OnSetText(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnSetText);
		CQt.QAccessibleWidget_OnVirtual_Hook(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnVirtual_Hook);
		CQt.QAccessibleWidget_OnLocalizedActionName(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnLocalizedActionName);
		CQt.QAccessibleWidget_OnLocalizedActionDescription(obj.ObjectPtr,  => QtBeef_QAccessibleWidget_OnLocalizedActionDescription);
	}
	static void QtBeef_QAccessibleWidget_OnIsValid(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnIsValid();
	}
	static void QtBeef_QAccessibleWidget_OnWindow(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnWindow();
	}
	static void QtBeef_QAccessibleWidget_OnChildCount(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnChildCount();
	}
	static void QtBeef_QAccessibleWidget_OnIndexOfChild(void* ptr, void** child)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnIndexOfChild(child);
	}
	static void QtBeef_QAccessibleWidget_OnRelations(void* ptr, void* match)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnRelations(match);
	}
	static void QtBeef_QAccessibleWidget_OnFocusChild(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnFocusChild();
	}
	static void QtBeef_QAccessibleWidget_OnRect(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnRect();
	}
	static void QtBeef_QAccessibleWidget_OnParent(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnParent();
	}
	static void QtBeef_QAccessibleWidget_OnChild(void* ptr, c_int index)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnChild(index);
	}
	static void QtBeef_QAccessibleWidget_OnText(void* ptr, QAccessible_Text t)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnText(scope .(), t);
	}
	static void QtBeef_QAccessibleWidget_OnRole(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnRole();
	}
	static void QtBeef_QAccessibleWidget_OnState(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnState();
	}
	static void QtBeef_QAccessibleWidget_OnForegroundColor(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnForegroundColor();
	}
	static void QtBeef_QAccessibleWidget_OnBackgroundColor(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnBackgroundColor();
	}
	static void QtBeef_QAccessibleWidget_OnInterface_Cast(void* ptr, QAccessible_InterfaceType t)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnInterface_cast(t);
	}
	static void QtBeef_QAccessibleWidget_OnActionNames(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnActionNames();
	}
	static void QtBeef_QAccessibleWidget_OnDoAction(void* ptr, libqt_string actionName)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnDoAction(actionName);
	}
	static void QtBeef_QAccessibleWidget_OnKeyBindingsForAction(void* ptr, libqt_string actionName)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnKeyBindingsForAction(actionName);
	}
	static void QtBeef_QAccessibleWidget_OnObject(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnObject();
	}
	static void QtBeef_QAccessibleWidget_OnChildAt(void* ptr, c_int x, c_int y)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnChildAt(x, y);
	}
	static void QtBeef_QAccessibleWidget_OnSetText(void* ptr, QAccessible_Text t, libqt_string text)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnSetText(t, text);
	}
	static void QtBeef_QAccessibleWidget_OnVirtual_Hook(void* ptr, c_int id, void* data)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnVirtual_hook(id, data);
	}
	static void QtBeef_QAccessibleWidget_OnLocalizedActionName(void* ptr, libqt_string name)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnLocalizedActionName(scope .(), name);
	}
	static void QtBeef_QAccessibleWidget_OnLocalizedActionDescription(void* ptr, libqt_string name)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnLocalizedActionDescription(scope .(), name);
	}
	public this(QAccessibleWidget_Ptr ptr)
	{
		this.ptr = ptr;
		QtBf_ConnectSignals(this);
	}
	public this(IQWidget o)
	{
		this.ptr = CQt.QAccessibleWidget_new((.)o?.ObjectPtr);
		QtBf_ConnectSignals(this);
	}
	public this(IQWidget o, QAccessible_Role r)
	{
		this.ptr = CQt.QAccessibleWidget_new2((.)o?.ObjectPtr, r);
		QtBf_ConnectSignals(this);
	}
	public this(IQWidget o, QAccessible_Role r, String name)
	{
		this.ptr = CQt.QAccessibleWidget_new3((.)o?.ObjectPtr, r, libqt_string(name));
		QtBf_ConnectSignals(this);
	}
	public  virtual bool OnIsValid()
	{
		return default;
	}
	public  virtual QWindow_Ptr OnWindow()
	{
		return default;
	}
	public  virtual c_int OnChildCount()
	{
		return default;
	}
	public  virtual c_int OnIndexOfChild(void** child)
	{
		return default;
	}
	public  virtual void* OnRelations(void* match)
	{
		return default;
	}
	public  virtual QAccessibleInterface_Ptr OnFocusChild()
	{
		return default;
	}
	public  virtual QRect_Ptr OnRect()
	{
		return default;
	}
	public  virtual QAccessibleInterface_Ptr OnParent()
	{
		return default;
	}
	public  virtual QAccessibleInterface_Ptr OnChild(c_int index)
	{
		return default;
	}
	public  virtual void OnText(String outStr, QAccessible_Text t)
	{
	}
	public  virtual QAccessible_Role OnRole()
	{
		return default;
	}
	public  virtual QAccessible_State_Ptr OnState()
	{
		return default;
	}
	public  virtual QColor_Ptr OnForegroundColor()
	{
		return default;
	}
	public  virtual QColor_Ptr OnBackgroundColor()
	{
		return default;
	}
	public  virtual void* OnInterface_cast(QAccessible_InterfaceType t)
	{
		return default;
	}
	public  virtual void* OnActionNames()
	{
		return default;
	}
	public  virtual void OnDoAction(libqt_string actionName)
	{
	}
	public  virtual void* OnKeyBindingsForAction(libqt_string actionName)
	{
		return default;
	}
	public QWidget_Ptr Widget()
	{
		return this.ptr.Widget();
	}
	public QObject_Ptr ParentObject()
	{
		return this.ptr.ParentObject();
	}
	public void AddControllingSignal(String signal)
	{
		this.ptr.AddControllingSignal(signal);
	}
	public  virtual QObject_Ptr OnObject()
	{
		return default;
	}
	public  virtual QAccessibleInterface_Ptr OnChildAt(c_int x, c_int y)
	{
		return default;
	}
	public  virtual void OnSetText(QAccessible_Text t, libqt_string text)
	{
	}
	public QAccessibleTextInterface_Ptr TextInterface()
	{
		return this.ptr.TextInterface();
	}
	public QAccessibleEditableTextInterface_Ptr EditableTextInterface()
	{
		return this.ptr.EditableTextInterface();
	}
	public QAccessibleValueInterface_Ptr ValueInterface()
	{
		return this.ptr.ValueInterface();
	}
	public QAccessibleActionInterface_Ptr ActionInterface()
	{
		return this.ptr.ActionInterface();
	}
	public QAccessibleImageInterface_Ptr ImageInterface()
	{
		return this.ptr.ImageInterface();
	}
	public QAccessibleTableInterface_Ptr TableInterface()
	{
		return this.ptr.TableInterface();
	}
	public QAccessibleTableCellInterface_Ptr TableCellInterface()
	{
		return this.ptr.TableCellInterface();
	}
	public QAccessibleHyperlinkInterface_Ptr HyperlinkInterface()
	{
		return this.ptr.HyperlinkInterface();
	}
	public  virtual void OnVirtual_hook(c_int id, void* data)
	{
	}
	public void Tr(String outStr, c_char* sourceText)
	{
		this.ptr.Tr(outStr, sourceText);
	}
	public  virtual void OnLocalizedActionName(String outStr, libqt_string name)
	{
	}
	public  virtual void OnLocalizedActionDescription(String outStr, libqt_string name)
	{
	}
	public void PressAction(String outStr)
	{
		this.ptr.PressAction(outStr);
	}
	public void IncreaseAction(String outStr)
	{
		this.ptr.IncreaseAction(outStr);
	}
	public void DecreaseAction(String outStr)
	{
		this.ptr.DecreaseAction(outStr);
	}
	public void ShowMenuAction(String outStr)
	{
		this.ptr.ShowMenuAction(outStr);
	}
	public void SetFocusAction(String outStr)
	{
		this.ptr.SetFocusAction(outStr);
	}
	public void ToggleAction(String outStr)
	{
		this.ptr.ToggleAction(outStr);
	}
	public void ScrollLeftAction(String outStr)
	{
		this.ptr.ScrollLeftAction(outStr);
	}
	public void ScrollRightAction(String outStr)
	{
		this.ptr.ScrollRightAction(outStr);
	}
	public void ScrollUpAction(String outStr)
	{
		this.ptr.ScrollUpAction(outStr);
	}
	public void ScrollDownAction(String outStr)
	{
		this.ptr.ScrollDownAction(outStr);
	}
	public void NextPageAction(String outStr)
	{
		this.ptr.NextPageAction(outStr);
	}
	public void PreviousPageAction(String outStr)
	{
		this.ptr.PreviousPageAction(outStr);
	}
	public void Tr2(String outStr, c_char* sourceText, c_char* disambiguation)
	{
		this.ptr.Tr2(outStr, sourceText, disambiguation);
	}
	public void Tr3(String outStr, c_char* sourceText, c_char* disambiguation, c_int n)
	{
		this.ptr.Tr3(outStr, sourceText, disambiguation, n);
	}
}
interface IQAccessibleWidget : IQtObjectInterface
{
}
extension CQt
{
	[LinkName("QAccessibleWidget_new")]
	public static extern QAccessibleWidget_Ptr QAccessibleWidget_new(void** o);
	[LinkName("QAccessibleWidget_new2")]
	public static extern QAccessibleWidget_Ptr QAccessibleWidget_new2(void** o, QAccessible_Role r);
	[LinkName("QAccessibleWidget_new3")]
	public static extern QAccessibleWidget_Ptr QAccessibleWidget_new3(void** o, QAccessible_Role r, libqt_string name);
	[LinkName("QAccessibleWidget_IsValid")]
	public static extern bool QAccessibleWidget_IsValid(void* self);
	
	public function void QAccessibleWidget_OnIsValid_action(void* self);
	[LinkName("QAccessibleWidget_OnIsValid")]
	public static extern bool QAccessibleWidget_OnIsValid(void* self, QAccessibleWidget_OnIsValid_action _action);
